# roundtable

./: Cargo.toml  README.md  deny.toml  install.sh
agent/: intent-card.json  owner-map.json  test-map.json
hooks/: roundtable-sessionstart.sh
src/: cadence.rs  ledger.rs  lib.rs  main.rs  session.rs  table.rs
tests/: acceptance_ac1.rs  acceptance_ac2.rs  acceptance_ac3.rs  acceptance_ac4.rs  acceptance_ac5.rs  acceptance_ac6.rs  acceptance_ac7.rs  cadence_tests.rs  integration_test.rs  proptest_invariants.rs
units/: roundtable-bind.service  roundtable-bind.timer  roundtable.service  roundtable.timer
