[package]
name = "roundtable"
version = "0.4.0"
edition = "2021"
rust-version = "1.85"

[[bin]]
name = "roundtable"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sigpipe = "0.1"

[dev-dependencies]
tempfile = "3"
